Find the output

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,3 +28,7 @@ button{
     background-color: tomato;
     color: white;
 }
+#details,#pizza-amount{
+    font-style: italic;
+    font-size: 26px;
+}
